--- a/Aus Open/ausopen.css
+++ b/Aus Open/ausopen.css
@@ -21,3 +21,24 @@
   body {
     background-color: #377DB8;
   }
+  h1 {
+    font-family: 'actor';
+    color: white;
+    text-align: center;
+  }
+  h2 {
+    font-family: 'actor';
+    color: white;
+    text-align: center;
+  }
+
+
+
+
+ .mainpic {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 50%;
+    border: solid rgb(241, 241, 50);
+ }
