--- a/style.css
+++ b/style.css
@@ -50,20 +50,34 @@ li {
   display: block;
   margin-left: auto;
   margin-right: auto;
-  width: 75%;
+  width: 60%;
+  border: solid white;
 }
 .dimensions {
   display: block;
   margin-left: auto;
   margin-right: auto;
+  border: solid white;
 }
 .row {
 display: flex;
-
+border: solid white;
 }
-
 .column {
-  flex: 33.33%;
+  flex: 50%;
   padding: 5px;
-
+  border: solid white;
+}
+.row2 {
+    display: flex;
+    }
+.column2 {
+      flex: 50%;
+      padding: 5px;
+    }
+.match {
+display: block;
+margin-left: auto;
+margin-right: auto;
+border: solid white;
 }
